XVII век: Восстание Степана Разина

--- a/centuries/xvii.html
+++ b/centuries/xvii.html
@@ -75,6 +75,12 @@
                     <p>Эти перемены не были понятны народу, что привело к расколу Русской православной церкви на сторонников патриарха, и, собственно, раскольников - старообрядцев (староверов), неформальным главой которых стал протопоп Аввакум - тоже уроженец Нижегородского края. Изначально и Аввакум, и Никон являлись членами небольшого "Кружка ревнителей благочестия", известного своими реформистскими идеями, но после вступления Никона на патриарший престол их пути разошлись.</p>
                     <p>Староверов преследовали, сажали в тюрьмы, они были вынуждены скрываться на Поморском Севере, в Заволжье, Урале и Сибире. Они устраивали показательные самосожжения и умирали голодной смертью.</p>
                 </div>
+                <div class="chapter" id="razin" data-chapter="Восстание Степана Разина">
+                    <p>В 1667 году начинается крестьянская война между войсками крестьян и казаков под предводительством Степана Разина с одной стороны, и с царскими войсами с другой. В 1670 году восстание дошло до Волги.</p>
+                    <p>На Нижегородской земле повстанцами руководил сподвижник атамана Максим Осипов. Восстанием охвачены Богородск, Большое Мурашкино, Ворсма, Павлове, Гагино, Курмыш. Лысково встречает отряды М. Осипова колокольным звоном и крестным ходом. Занял оборону лишь Макарьевский монастырь.</p>
+                    <p>Восставшие перерезали дороги из Нижнего в Муром и Арзамас, подошли близко к Нижнему и встали там, ожидая поддержки со стороны горожан, но повстанцы получили огромное сопротивление со стороны царских войск.</p>
+                    <p>Царским войскам, укрепившимся в Арзамасе, удалось разбить разинцев под Лысковом и Мурашкином и учинить жестокую расправу над восставшими. В Арзамасе, Мурашкине и Нижнем Новгороде устанавливались виселицы, схваченных участников восстания вешали, сажали на кол, прибивали гвоздями к доскам, драли крючьями, засекали до смерти.</p>
+                </div>
                 <br>
                 <div id="century-navigation">
                     <b>Хронология:</b>
