XVIII век: административно-территориальное деление

--- a/centuries/xviii.html
+++ b/centuries/xviii.html
@@ -58,10 +58,14 @@
         <div class="page-content">
             <br><br><br>
             <div class="content" id="topic_content">
-                <p class="introduction">Введение</p>
+                <p class="introduction">XVIII век для России - это век реформ и открытия Петром I "окна в Европу"</p>
                 <div id="table_of_contents"></div>
-                <div class="chapter" id="example" data-chapter="Пример главы">
-                    <p>Текст главы</p>
+                <div class="chapter" id="governorate" data-chapter="Административно-территориальное деление">
+                    <p>В 1708 году Петр I осуществляет одну из важнейших реформ управления - областную (губернскую) реформу, в ходе которой уезды и рязряды - административные единицы Русского царства - были преобразованы в 8 губерний. Изначально Нижний Новгород был причислен к Казанской губернии, затем Петр I выделил из ее северо-западной части самостоятельную Нижегородскую губернию, однако он вновь ее упразднил в 1717 году, вернув территории в Казанскую губернию.</p>
+                    <p>В 1719 году Петр I вновь воссоздал Нижегородскую губернию, включив в ее состав 3 провинции: Алатырскую, Арзамасскую, Нижегородскую, а также 7 городов.</p>
+                    <img data-label="Нижегородская губерния на карте"/>
+                    <p>В 1779 году императрица Екатерина II проводит административную реформу, в ходе которой взамен Нижегородской губернии было учреждено Нижегородское наместничество, включившее в себя, помимо бывшей Нижегородской губернии, части Рязанского и Владимирского наместничеств и часть Казанской губернии.</p>
+                    <p>В 1796 году император Павел I переименовывает Нижегородское наместничество обратно в губернию, а через год, в 1797 году, Нижегородская губерния была расширена за счет территорий, высвободившихся при расформировании Пензенской губернии, но уже в 1801 году Пензенская губерния была восстановлена в прежних границах.</p>
                 </div>
                 <br>
                 <div id="century-navigation">
