XVIII век: императорские визиты

--- a/centuries/xviii.html
+++ b/centuries/xviii.html
@@ -67,6 +67,12 @@
                     <p>В 1779 году императрица Екатерина II проводит административную реформу, в ходе которой взамен Нижегородской губернии было учреждено Нижегородское наместничество, включившее в себя, помимо бывшей Нижегородской губернии, части Рязанского и Владимирского наместничеств и часть Казанской губернии.</p>
                     <p>В 1796 году император Павел I переименовывает Нижегородское наместничество обратно в губернию, а через год, в 1797 году, Нижегородская губерния была расширена за счет территорий, высвободившихся при расформировании Пензенской губернии, но уже в 1801 году Пензенская губерния была восстановлена в прежних границах.</p>
                 </div>
+                <div class="chapter" id="visit" data-chapter="Императорские визиты">
+                    <p>В 1722 году, отправляясь в персидский поход, Нижний Новгород посещает Петр I и празднует свое 50-летие. За год до этого, в 1721 году  на епископскую кафедру был назначен архимандрит Кержебельмашского монастыря Питирим, основавший эллино-греческую и славяно-русскую церковные школы.</p>
+                    <p>В 1767 году город посетила императрица Екатерина II, но город ей не совсем понравился: <i>Сей город ситуацией прекрасен, но строением мерзок ... Всё — либо на боку лежит, либо близко того…</i></p>
+                    <p>Во время своего пребывания в городе она познакомилась с известным нижегородским изобретателем-механиком Иваном Кулибиным. Впоследствии он был приглашён к императорскому двору.</p>
+                    <p>После её визита был составлен новый регулярный план города, предусматривающий квартальную систему. С 1770 по 1913 годы была реконструирована улица Большая Покровская. Она стала постепенно застраиваться каменными домами. В 1798 году был построен первый городской театр, известный сегодня как Нижегородский театр драмы.</p>
+                </div>
                 <br>
                 <div id="century-navigation">
                     <b>Хронология:</b>
