--- a/centuries/xix.html
+++ b/centuries/xix.html
@@ -58,10 +58,13 @@
         <div class="page-content">
             <br><br><br>
             <div class="content" id="topic_content">
-                <p class="introduction">Введение</p>
+                <p class="introduction">XIX век был тяжелым для России - в первую очередь это Отечественная война 1812 года, в которой нижегородцы принимали активное участие</p>
                 <div id="table_of_contents"></div>
-                <div class="chapter" id="example" data-chapter="Пример главы">
-                    <p>Текст главы</p>
+                <div class="chapter" id="war" data-chapter="Отечественная война 1812 года">
+                    <p>Французский император Наполеон I Бонапарт принимает решение начать войну с Россией, и двигается к Москве. Российская империя столкнулась с проблемой нехватки воинской силы. В июле в Нижнем Новгороде был оглашен царский манифест <i>"О сборе внутри государства земского ополчения"</i>: <i>Сего ради при все твердой надежде на храброе Наше воинство полагаем Мы за необходимо нужное собрать внутри Государства новые силы, которые, нанося новый ужас врагу, составили бы вторую ограду в подкрепление первой, и в защиту домов, жен и детей каждого и всех"</i>. Александр I обращался к исторической памяти русского народа, к славным традициям 1612 года, призывая к тому, чтобы враг встретил <i>"в каждом дворянине Пожарского, в каждом гражданине Минина</i>.</p>
+                    <p>В конце июля был издан манифест об организации ополченских округов, согласно которому шестнадцать губерний составляли 3 округа. Нижегородская губерния вошла в третий - приволжский - округ, центром которого был объявлен Нижний Новгород. Начальником округа был назначен генерал-лейтенант, сенатор и кавалер граф Петр Александрович Толстой.</p>
+                    <p>Помогали нижегородцы и финансово: в сборе средств участвовали все сословия. Инициатором пожертвований был гласный (глава) городской думы Ф. П. Переплетчиков.</p>
+                    <p>В конце ноября нижегородское ополчение общей сложностю около 13 000 человек выступило на войну.</p>
                 </div>
                 <br>
                 <div id="century-navigation">
