--- a/centuries/xix.html
+++ b/centuries/xix.html
@@ -65,6 +65,7 @@
                     <p>В конце июля был издан манифест об организации ополченских округов, согласно которому шестнадцать губерний составляли 3 округа. Нижегородская губерния вошла в третий - приволжский - округ, центром которого был объявлен Нижний Новгород. Начальником округа был назначен генерал-лейтенант, сенатор и кавалер граф Петр Александрович Толстой.</p>
                     <p>Помогали нижегородцы и финансово: в сборе средств участвовали все сословия. Инициатором пожертвований был гласный (глава) городской думы Ф. П. Переплетчиков.</p>
                     <p>В конце ноября нижегородское ополчение общей сложностю около 13 000 человек выступило на войну.</p>
+                    <p>В результате нападения французской армии на Москву, в Нижний Новгород прибывают московские помещики: Н. М. Карамзин, В. Л. Пушкин, Н. Н. Бантыш-Каменский, А. Ф. Малиновский, Ю. А. Нелединский-Мелецкий, К. Н. Батюшков, С. Н. Глинка, которые организовали в городе свой литературный клуб.</p>
                 </div>
                 <br>
                 <div id="century-navigation">
