XIX век: Всероссийская выставка

--- a/centuries/xix.html
+++ b/centuries/xix.html
@@ -58,7 +58,7 @@
         <div class="page-content">
             <br><br><br>
             <div class="content" id="topic_content">
-                <p class="introduction">XIX век был тяжелым для России - в первую очередь это Отечественная война 1812 года, в которой нижегородцы принимали активное участие</p>
+                <p class="introduction">XIX век был тяжелым для России - в первую очередь это Отечественная война 1812 года, в которой нижегородцы принимали активное участие. В конце столетия была проведена Всероссийская выставка.</p>
                 <div id="table_of_contents"></div>
                 <div class="chapter" id="war" data-chapter="Отечественная война 1812 года">
                     <p>Французский император Наполеон I Бонапарт принимает решение начать войну с Россией, и двигается к Москве. Российская империя столкнулась с проблемой нехватки воинской силы. В июле в Нижнем Новгороде был оглашен царский манифест <i>"О сборе внутри государства земского ополчения"</i>: <i>Сего ради при все твердой надежде на храброе Наше воинство полагаем Мы за необходимо нужное собрать внутри Государства новые силы, которые, нанося новый ужас врагу, составили бы вторую ограду в подкрепление первой, и в защиту домов, жен и детей каждого и всех"</i>. Александр I обращался к исторической памяти русского народа, к славным традициям 1612 года, призывая к тому, чтобы враг встретил <i>"в каждом дворянине Пожарского, в каждом гражданине Минина</i>.</p>
@@ -66,6 +66,16 @@
                     <p>Помогали нижегородцы и финансово: в сборе средств участвовали все сословия. Инициатором пожертвований был гласный (глава) городской думы Ф. П. Переплетчиков.</p>
                     <p>В конце ноября нижегородское ополчение общей сложностю около 13 000 человек выступило на войну.</p>
                     <p>В результате нападения французской армии на Москву, в Нижний Новгород прибывают московские помещики: Н. М. Карамзин, В. Л. Пушкин, Н. Н. Бантыш-Каменский, А. Ф. Малиновский, Ю. А. Нелединский-Мелецкий, К. Н. Батюшков, С. Н. Глинка, которые организовали в городе свой литературный клуб.</p>
+                </div>
+                <div class="chapter" id="development" data-chapter="Развитие Нижнего Новгорода в XIX веке">
+                    <p>В 1817 году в село Кунавино (нынешний Канавинский район) была перемещена Макарьевская ярмарка. До этого она каждый год организовывалась возле Макарьевского монастыря, который сгорел годом ранее. С тех пор она стала называться Нижегородской ярмаркой. Благодаря ей началось быстрое экономическое развитие города и прилегающих к нему сёл. Село Кунавино стало крупной купеческой слободой. Позже здесь были построены промышленные предприятия.</p>
+                    <p>В 1849 году в селе Сормово (нынешний Сормовский район), вблизи Нижнего Новгорода, было основано крупное промышленное предприятие, позже приобретшее известность как Сормовский завод. С 1850 года оно выпускало речные пароходы, различные машины, железнодорожные вагоны, паровозы, теплоходы, трамваи. Благодаря заводу Сормово вскоре превратилось в большой рабочий посёлок.</p>
+                    <p>В 1862 году было завершено строительство железной дороги Москва - Нижний Новгород. В 1895 году железную дорогу протянули до Сормова. В 1904 году была построена ветка Московско-Казанской железной дороги от Арзамаса к городу.</p>
+                </div>
+                <div class="chapter" id="exhibition" data-chapter="Всероссийская выставка (1896)">
+                    <p>Правительство было обеспокоено снижением оборотов Нижегородской ярмарки. Для того, чтобы ее "расшевелить" император издал указ о проведении Всероссийской выставки в 1896 году.</p>
+                    <img data-label="Макарьевская ярмарка"/>
+                    <p>Это выставка стала крупнейшей в дореволюционной России. К открытию выставки в Нижнем Новгороде был пущен первый в России электрический трамвай, устроены фуникулеры — подъёмники, доставлявшие пассажиров с нижней части города в верхнюю (Кремлёвский и Похвалинский), выстроены здания городского драматического театра, окружного суда, биржи Волжско-Камского банка, гостиниц, открыта пароходная скоростная линия, связывающая верхнюю часть города с его заречной частью.</p>
                 </div>
                 <br>
                 <div id="century-navigation">
