--- a/centuries/xx.html
+++ b/centuries/xx.html
@@ -58,10 +58,36 @@
         <div class="page-content">
             <br><br><br>
             <div class="content" id="topic_content">
-                <p class="introduction">Введение</p>
+                <p class="introduction">XX век был не менее тяжелым для России, которой предстояло пережить две революции, Первую мировкую и Великую Отечественную Войну.</p>
                 <div id="table_of_contents"></div>
-                <div class="chapter" id="example" data-chapter="Пример главы">
-                    <p>Текст главы</p>
+                <div class="chapter" id="revolutions" data-chapter="Во время революций">
+                    <p>Во время революции 1905 года общественно-политическая ситуация в городе вышла из-под контроля властей. Сормово было охвачено восстанием, позже подавленным полицией. В апреле 1908 года произошло одно из сильнейших наводнений. Рождественская улица и Казанский вокзал были затоплены.</p>
+                    <p>В 1913 году был построен Государственный банк, который открывал лично Император Николай II. В 1916 году в городе открылся первый Народный государственный университет.</p>
+                    <img data-label="Государственный банк"/>
+                    <p>В 1917 году, в связи с Первой мировой войной, в Нижний Новгород был эвакуирован Варшавский политехнический институт, на основе которого был создан Нижегородский политехнический институт.</p>
+                    <p>После Февральской революции обстановка в городе начала накаляться. В сентябре 1917 года готовились выборы в городскую думу. Рабочие выходили на демонстрации с требованием избирательных прав. После Октябрьской революции советская власть установилась в городе осенью 1917 года. В 1919 году Кунавино и Сормово получили статус городов. В оборот вместо названия "Кунавино" постепенно вошло "Канавино".</p>
+                </div>
+                <div class="chapter" id="before_war" data-chapter="До войны">
+                    <p>В 1929 году города Сормово и Канавино были упразднены, а их территория вместе с некоторыми сёлами включена в состав Большого Нижнего Новгорода, который стал делиться на районы. В этом же году было отменено старое административное деление страны на губернии. Нижний Новгород стал центром Нижегородского края.</p>
+                    <p>В 1932 году, указом ВЦИК - Всероссийского центрального исполнительного комитета - и постановлением президиума крайисполкома, город переименован в Горький, в честь писателя Максима Горького. В 1933 году Горьковский край расширяется и город становится центром Горьковской области.</p>
+                </div>
+                <div class="chapter" id="war" data-chapter="Великая Отечественная Война">
+                    <p>22 июня 1941 года началась Великая Отечественная Война.</p>
+                    <p>На территории Горького было сформировано 56 воинских частей и 72 отряда народного ополчения, которые участвовали в битве под Москвой. На фронтах войны сражались 822 тысячи горьковчан - каждый четвертый житель области, из которых более 350 тысяч человек не вернулись домой. 316 горьковчан были удостоены Золотой Звездой Героя.</p>
+                    <img data-label="Построение дивизии перед отправкой на фронт"/>
+                    <p>Город был важным центром производства вооружений. Каждый второй автомобиль, каждый третий танк и каждая четвёртая артиллерийская установка были изготовлены на предприятиях города.</p>
+                    <p>К 30-летию Победы, у стен Кремля, был открыт мемориал "Горьковчане - фронту".</p>
+                    <img data-label="Мемориал &quot;Горьковчане - фронту&quot;"/>
+                </div>
+                <div class="chapter" id="after_war" data-chapter="После войны">
+                    <p>После войны Горький стал значимым промышленным центром - здесь располагается ГАЗ - Горьковский автомобильный завод. В 1959 году город был закрыт для посещения иностранцами.</p>
+                    <p>В 1970 году указом Президиума Верховного Совета СССР Горький был награждён Орденом Ленина. Это нашло отражение в современном гербе города — гербовый щит с традиционным оленем обрамлён орденской лентой Ордена Ленина.</p>
+                    <p>В 1985 году в городе был открыт метрополитен.</p>
+                </div>
+                <div class="chapter" id="perestroyka" data-chapter="Перестройка">
+                    <p>В 1985 году в СССР началась перестройка.</p>
+                    <p>В начале 1990-х годов статус «закрытого города» был снят, и город стал доступен для посещений иностранцами.</p>
+                    <p>22 октября 1990 года Указом Президиума Верховного Совета РСФСР Горький был переименован обратно в Нижний Новгород.</p>
                 </div>
                 <br>
                 <div id="century-navigation">
