--- a/centuries/xx.html
+++ b/centuries/xx.html
@@ -85,8 +85,7 @@
                     <p>В 1985 году в городе был открыт метрополитен.</p>
                 </div>
                 <div class="chapter" id="perestroyka" data-chapter="Перестройка">
-                    <p>В 1985 году в СССР началась перестройка.</p>
-                    <p>В начале 1990-х годов статус «закрытого города» был снят, и город стал доступен для посещений иностранцами.</p>
+                    <p>В 1985 году в СССР началась перестройка. В начале 1990-х годов статус «закрытого города» был снят, и город стал доступен для посещений иностранцами.</p>
                     <p>22 октября 1990 года Указом Президиума Верховного Совета РСФСР Горький был переименован обратно в Нижний Новгород.</p>
                 </div>
                 <br>
