Промышленный Нижний: машиностроение и металлообработка

--- a/stands/industrial.html
+++ b/stands/industrial.html
@@ -58,10 +58,12 @@
         <div class="page-content">
             <br><br><br>
             <div class="content" id="topic_content">
-                <p class="introduction">Введение</p>
+                <p class="introduction">Нижегородская область - один из наиболее экономически развитых субъектов РФ. Основу промышленности Нижегородской области составляют такие отрасли, как машиностроение и металлургия, химия и нефтехимия, оборонная промышленность, электроэнергетика.</p>
                 <div id="table_of_contents"></div>
-                <div class="chapter" id="example" data-chapter="Пример главы">
-                    <p>Текст главы</p>
+                <div class="chapter" id="machine_metal" data-chapter="Машиностроение и металлообработка">
+                    <p>Машиностроение и металлообработка являются крупнейшими отраслями промышленности области. Машиностроение составляет 45% промышленного производства Нижегородской области. Согласно экспертной оценке, промышленность региона специализирована на транспортном машиностроении: автостроении, судостроении и самолетостроении.</p>
+                    <p>В этой отрасли в Нижегородской области представлены такие крупные компании как "Группа ГАЗ", "Ростехнологии", "Росатом".</p>
+                    <img data-label="Горьковский автомобильный завод"/>
                 </div>
             </div>
         </div>
