Очепятка, забытая иллюстрация

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     <img alt="Победный Нижний" src="img/cards/stands/victory.jpg" />
                     <div class="mask" style="background-color: rgba(25,132,74,0.73)">
                         <h2 style="color: #7aee90">Победный Нижний</h2>
-                        <p>Вклад нижегородцев в победе в Великой Отечественной войне</p>
+                        <p>Вклад нижегородцев в победу в Великой Отечественной войне</p>
                         <a href="stands/victorious.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: forestgreen; color: white">Перейти</a>
                     </div>
                 </div>
