--- a/index.html
+++ b/index.html
@@ -191,6 +191,13 @@
                         <a href="stands/honorary_citizens.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: #f45656; color: black">Перейти</a>
                     </div>
                 </div>
+                <br><br>
+                <a class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" href="qr-codes.zip" style="color: white">
+                    Скачать QR-коды
+                </a>
+                <br><br>
+                <b>(c) Mikhail K.</b>
+                <br>
             </div>
         </div>
         <br>
