--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
                 </div>
                 <div class="view">
                     <img alt="Театральный Нижний" src="img/cards/stands/theatre.jpg" />
-                    <div class="mask" style="background-color: rgba(142,188,209,0.78)">
+                    <div class="mask" style="background-color: rgba(123, 152, 211, 0.73)">
                         <h2 style="color: #004889d6">Театральный Нижний</h2>
-                        <p>Интересная информация о нижегородских театрах</p>
+                        <p>История появления и развития театров в Нижнем Новгороде</p>
                         <a href="stands/theatrical.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: skyblue; color: black">Перейти</a>
                     </div>
                 </div>
@@ -171,7 +171,7 @@
                     <img alt="Музыкальный Нижний" src="img/cards/stands/music.jpg" />
                     <div class="mask" style="background-color: rgba(111,115,132,0.73)">
                         <h2>Музыкальный Нижний</h2>
-                        <p>Интересная информация о нижегородской музыке</p>
+                        <p>Интересная информация о академиях и консерваториях Нижнего Новгорода</p>
                         <a href="stands/musical.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info">Перейти</a>
                     </div>
                 </div>
@@ -179,7 +179,7 @@
                     <img alt="Православный Нижний" src="img/cards/stands/orthodoxy.jpg" />
                     <div class="mask" style="background-color: rgba(132,115,46,0.73)">
                         <h2 style="color: orange">Православный Нижний</h2>
-                        <p>О православии в Нижнем Новгороде</p>
+                        <p>История православия и храмов в Нижнем Новгороде</p>
                         <a href="stands/orthodoxic.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: #e2a91f; color: black">Перейти</a>
                     </div>
                 </div>
@@ -187,7 +187,7 @@
                     <img alt="Почетные граждане" src="img/cards/stands/honorary_citizens.jpg" />
                     <div class="mask" style="background-color: rgba(132,5,61,0.73)">
                         <h2 style="color: orangered">Почетные граждане</h2>
-                        <p>Информация о почетных гражданах нашего города</p>
+                        <p>Информация о почетных гражданах Нижнего Новгорода</p>
                         <a href="stands/honorary_citizens.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: #f45656; color: black">Перейти</a>
                     </div>
                 </div>
