--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 </div>
                 <div class="view">
                     <img alt="XX век" src="img/cards/centuries/xx.jpg" />
-                    <div class="mask" style="background-color: rgba(156, 180, 230, 0.53)">
+                    <div class="mask" style="background-color: rgba(123, 152, 211, 0.73)">
                         <h2 style="color: #5357e2">XX век</h2>
                         <p>Революция, переименование, война и возвращение исторического названия</p>
                         <a href="centuries/xx.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: #8f92f2; color: white">Перейти</a>
@@ -145,7 +145,7 @@
                 </div>
                 <div class="view">
                     <img alt="Театральный Нижний" src="img/cards/stands/theatre.jpg" />
-                    <div class="mask" style="background-color: rgba(123, 152, 211, 0.73)">
+                    <div class="mask" style="background-color: rgba(142,188,209,0.78)">
                         <h2 style="color: #004889d6">Театральный Нижний</h2>
                         <p>История появления и развития театров в Нижнем Новгороде</p>
                         <a href="stands/theatrical.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: skyblue; color: black">Перейти</a>
