--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
                 </div>
                 <div class="view">
                     <img alt="XIX век" src="img/cards/centuries/xix.jpg" />
-                    <div class="mask" style="background-color: rgba(46, 216, 208, 0.75)">
+                    <div class="mask" style="background-color: rgba(35, 174, 167, 0.75)">
                         <h2 style="color: #d5feff">XIX век</h2>
-                        <p>Отечественная война и Всероссийская выставка</p>
+                        <p>Отечественная война, развитие и Всероссийская выставка</p>
                         <a href="centuries/xix.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: #3be0e6; color: white">Перейти</a>
                     </div>
                 </div>
