Свято-Троице-Макарьево-Желтоводский монастырь

--- a/centuries/xv.html
+++ b/centuries/xv.html
@@ -64,6 +64,7 @@
                     <p>В 1408 году город был опустошён во время вторжения ордынцев.</p>
                     <p>В 1414 году присоединение Нижнего Новгорода к Москве было окончательно закреплено походом Великого князя Московского Юрия Дмитриевича. Князь "не сътвори зла ничтоже" его жителям, за что получил признание и уважение горожан.</p>
                     <p>В 1434 году заложен Свято-Троице-Макарьево-Желтоводский монастырь, в котором впоследствии будет обучаться патриарх Никон.</p>
+                    <img data-label="Свято-Троице-Макарьево-Желтоводский монастырь. Наши дни"/>
                     <p>В 1445 году город был взят войсками казанского хана Улу-Мухаммеда.</p>
                 </div>
                 <div class="chapter" id="bridge" data-chapter="Пограничный мост">
