--- a/stands/orthodoxic.html
+++ b/stands/orthodoxic.html
@@ -58,10 +58,15 @@
         <div class="page-content">
             <br><br><br>
             <div class="content" id="topic_content">
-                <p class="introduction">Введение</p>
+                <p class="introduction">Более 1000 лет назад, в 988 году князь Владимир провел Крещение Руси, а Нижний Новгород был основан позже более чем на 200 лет. Таким образом, история православия в Нижнем Новгороде берет начало с момента его основания.</p>
                 <div id="table_of_contents"></div>
-                <div class="chapter" id="example" data-chapter="Пример главы">
-                    <p>Текст главы</p>
+                <div class="chapter" id="early" data-chapter="Раннее время">
+                    <p>Решив основать Нижний Новгород, Юрий Всеволодович поручил возвести крепость. В первые годы ее существования были построены два белокаменных храма, в том числе Архангельский собор.</p>
+                    <img data-label="Михайлово-Архангельский собор"/>
+                </div>
+                <div class="chapter" id="church_schism" data-chapter="Раскол">
+                    <p>Решив основать Нижний Новгород, Юрий Всеволодович поручил возвести крепость. В первые годы ее существования были построены два белокаменных храма, в том числе Архангельский собор.</p>
+                    <img data-label="Патриарх Никон (слева) и протопоп Аввакум (справа)"/>
                 </div>
             </div>
         </div>
