--- a/404.html
+++ b/404.html
@@ -48,6 +48,17 @@
         </div>
         <nav class="mdl-navigation">
             <a class="mdl-navigation__link" href="/index.html">Главная</a>
+
+            <a class="mdl-navigation__link mdl-layout__drawer-navigation-subcategory">Столетия:</a>
+            <a class="mdl-navigation__link" href="/centuries/xiii.html">XIII век</a>
+            <a class="mdl-navigation__link" href="/centuries/xiv.html">XIV век</a>
+            <a class="mdl-navigation__link" href="/centuries/xv.html">XV век</a>
+            <a class="mdl-navigation__link" href="/centuries/xvi.html">XVI век</a>
+            <a class="mdl-navigation__link" href="/centuries/xvii.html">XVII век</a>
+            <a class="mdl-navigation__link" href="/centuries/xviii.html">XVIII век</a>
+            <a class="mdl-navigation__link" href="/centuries/xix.html">XIX век</a>
+            <a class="mdl-navigation__link" href="/centuries/xx.html">XX век</a>
+
             <a class="mdl-navigation__link mdl-layout__drawer-navigation-subcategory">Стенды:</a>
             <a class="mdl-navigation__link" href="/stands/architectural.html">Архитектурный Нижний</a>
             <a class="mdl-navigation__link" href="/stands/literary.html">Литературный Нижний</a>
