Православный Нижний: Строгановская церковь

--- a/stands/orthodoxic.html
+++ b/stands/orthodoxic.html
@@ -65,8 +65,17 @@
                     <img data-label="Михайлово-Архангельский собор"/>
                 </div>
                 <div class="chapter" id="church_schism" data-chapter="Раскол">
-                    <p>Решив основать Нижний Новгород, Юрий Всеволодович поручил возвести крепость. В первые годы ее существования были построены два белокаменных храма, в том числе Архангельский собор.</p>
+                    <p>Уроженец Нижнего Новгорода, патриарх Никон на Московском соборе 1654 года принимает решение провести церковную реформу, заключающуюся во внесении изменений в богослужебные книги московской печати и некоторые обряды в целях их унификации с современными греческими.</p>
                     <img data-label="Патриарх Никон (слева) и протопоп Аввакум (справа)"/>
+                    <p>Народ отверг эти перемены, что привело к расколу Русской православной церкви на сторонников патриарха, и, раскольников - старообрядцев (староверов), неформальным главой которых стал протопоп Аввакум - тоже уроженец Нижегородского края.</p>
+                </div>
+                <div class="chapter" id="stroganov_church" data-chapter="Церковь Собора Пресвятой Богородицы">
+                    <p>Церковь Собора Пресвятой Богородицы более известна как <i>Рождественская</i> или <i>Строгановская</i>, так как была построена на средства купца Григория Дмитриевича Строганова. Сегодня храм имеет статус памятника архитектуры федерального значения.</p>
+                    <img data-label="Церковь Собора Пресвятой Богородицы"/>
+                    <p>Ее возведение началось в 1696 году, а завершено к 1701 году, однако произошел пожар. Восстанавливалась церковь уже не Строгановым, а его женой - Марией Яковлевной.</p>
+                    <p>В 1722 году Петр I приказал закрыть церковь из-за икон, написанных придворным мастером Караваком для столичного Петропавловского собора.</p>
+                    <p>Вновь открыт храм был только после смерти Петра I, в 1727 году. В 1870-1880 годах церковь отреставрировали.</p>
+                    <img data-label="Фотография 1870 года"/>
                 </div>
             </div>
         </div>
