Православный Нижний: Собор Александра Невского

--- a/stands/orthodoxic.html
+++ b/stands/orthodoxic.html
@@ -77,6 +77,21 @@
                     <p>Вновь открыт храм был только после смерти Петра I, в 1727 году. В 1870-1880 годах церковь отреставрировали.</p>
                     <img data-label="Фотография 1870 года"/>
                 </div>
+                <div class="chapter" id="radonezsh_church" data-chapter="Церковь Сергия Радонежского">
+                    <p>Храм преподобного Сергия Радонежского начал строиться в 1865 году после личного утверждения проекта императором Александром II. Строительство было завершено к 1869 году.</p>
+                    <img data-label="Церковь Сергия Радонежского"/>
+                    <p>В годы советской власти в храме располагался Союз художников, а в 2003 году церковь была передана Нижегородской епархии.</p>
+                    <p>Признана объектом кульурного наследия.</p>
+                </div>
+                <div class="chapter" id="nevsky_cathedral" data-chapter="Собор Александра Невского">
+                    <p>Собор святого благоверного князя Александра Невского (Новоярморочный собор) – собор на стрелке Волги и Оки, относящейся к историческому центру Нижнего Новгорода, построенный в 1868—1881 годах.</p>
+                    <p>В 1856 году ярморочное купечество выразило желание возвести второй ярморочный храм в память о посещении ярмарки императором Александром II. Сбор пожертвований длился 10 лет, и к 1866 году было собрано более 454 тысяч рублей. Правительство утведило проект церкви годом ранее - в 1865 году.</p>
+                    <img data-label="Начало XX века"/>
+                    <p>Храм был достроен 20 июля 1881 года и освящен в присутствии императора Александра III. Храм был местом встречи почётных гостей города - царской семьи, иерархов православной церкви.</p>
+                    <p>В 1929 году храм был закрыт, а через год все иконостасы и деревянные украшения пустили на дрова для обогрева местных домов. Прихожаном удалось спасти лишь несколько икон, в том числе икону Божией Матери и Животворящий Крест. В конце 1920-х годов планировался снос собора и возведение на его места памятника Владимиру Ленину, но этот проект был отменен.</p>
+                    <img data-label="Наши дни"/>
+                    <p>В 1983 году началась реставрация собора, в 1989 году началось восстановление шатров храма. Собор был передан под управление РПЦ в 1992 году.</p>
+                </div>
             </div>
         </div>
         <footer class="mdl-mini-footer">
