--- a/stands/honorary_citizens.html
+++ b/stands/honorary_citizens.html
@@ -58,10 +58,12 @@
         <div class="page-content">
             <br><br><br>
             <div class="content" id="topic_content">
-                <p class="introduction">Введение</p>
+                <p class="introduction">Почетный гражданин Нижнего Новгорода - звание, которое присваивается Городской думой Нижнего Новгорода в качестве награды за заслуги перед городом.<br>Сегодня известно три десятка почетных граждан Нижнего Новгорода.</p>
                 <div id="table_of_contents"></div>
-                <div class="chapter" id="example" data-chapter="Пример главы">
-                    <p>Текст главы</p>
+                <div class="chapter" id="empire" data-chapter="Российская Империя">
+                    <ul>
+                        <li><p>Сергей Юльевич Витте - российский государственный деятель, <i>"дедушка русской индустриализации"</i>, министр путей сообщения (1892), министр финансов (1892-1903), председатель Комитета министров (1903-1906), председатель Совета министров (1905-1906) Российской Империи, фактический автор Манифеста 17 октября 1905 года.</p></li>
+                    </ul>
                 </div>
             </div>
         </div>
