--- a/stands/honorary_citizens.html
+++ b/stands/honorary_citizens.html
@@ -62,7 +62,39 @@
                 <div id="table_of_contents"></div>
                 <div class="chapter" id="empire" data-chapter="Российская Империя">
                     <ul>
-                        <li><p>Сергей Юльевич Витте - российский государственный деятель, <i>"дедушка русской индустриализации"</i>, министр путей сообщения (1892), министр финансов (1892-1903), председатель Комитета министров (1903-1906), председатель Совета министров (1905-1906) Российской Империи, фактический автор Манифеста 17 октября 1905 года.</p></li>
+                        <li><p><b>Шишацкий Павел Дмитриевич</b> - машинист 1-класса, 3-участка службы тяги, Московско-Курской, Нижегородской и Муромской казённых железных дорог. Звание получено за образцовое ведение "Царского поезда" с Николаем II и его семьёй на XVI Всероссийскую промышленную и художественную выставку, проходившую в Нижнем Новгороде в 1896 году</p></li>
+                        <li><p><b>Сергей Юльевич Витте</b> - российский государственный деятель, <i>"дедушка русской индустриализации"</i>, министр путей сообщения (1892), министр финансов (1892-1903), председатель Комитета министров (1903-1906), председатель Совета министров (1905-1906) Российской Империи, фактический автор Манифеста 17 октября 1905 года.</p></li>
+                    </ul>
+                </div>
+                <div class="chapter" id="soviet_union" data-chapter="Советский Союз">
+                    <ul>
+                        <li><p><b>Гапонов-Грехов Андрей Викторович</b> - академик РАН Директор Института прикладной физики РАН, доктор физико-математических наук</p></li>
+                        <li><p><b>Грехова Мария Тихоновна</b> - доктор физико-математических наук, первый декан радиофизического факультета горьковского государственного университета</p></li>
+                        <li><p><b>Духовный Ефим Евсеевич</b> - участник финской и Великой Отечественной войн</p></li>
+                        <li><p><b>Кирьянов Игорь Александрович</b> - кандидат исторических наук, участник Великой Отечественной войны</p></li>
+                        <li><p><b>Кутепов Николай Васильевич</b> - митрополит Нижегородский и Арзамасский, участник Великой Отечественной войны</p></li>
+                        <li><p><b>Туркин Николай Иванович</b> - участник Великой Отечественной войны, лауреат Государственной премии</p></li>
+                        <li><p><b>Харитонов Владимир Михайлович</b> - участник Великой Отечественной войны, Герой Советского Союза</p></li>
+                        <li><p><b>Верещавин Иван Степанович</b> - участник Великой Отечественной войны</p></li>
+                        <li><p><b>Нестеров Аркадий Александрович</b> - композитор, ректор Нижегородской государственной консерватории, народный артист и заслуженный деятель искусств РСФСР</p></li>
+                        <li><p><b>Сильванов Дмитрий Павлович</b> - архитектор, доцент Горьковского инженерно-строительного института</p></li>
+                        <li><p><b>Захаров Алексей Никонорович</b> - участник Великой Отечественной войны, Герой Советского Союза</p></li>
+                        <li><p><b>Митенков Фёдор Михайлович</b> - герой Социалистического Труда, конструктор, академик РАН, почётный член Европейского ядерного общества, лауреат Ленинской и Государственных премий</p></li>
+                        <li><p><b>Калашников Василий Иванович</b> - русский изобретатель, конструктор, создатель оригинальных образцов судовых паросиловых установок и многих других изобретений</p></li>
+                        <li><p><b>Бусыгин Александр Харитонович</b> - герой Социалистического Труда</p></li>
+                        <li><p><b>Блохина Ирина Николаевна</b> - микробиолог</p></li>
+                        <li><p><b>Разуваев Григорий Алексеевич</b> - Академик АН СССР, выдающийся русский химик</p></li>
+                        <li><p><b>Сивухин, Лев Константинович</b> - хоровой и оркестровый дирижёр, народный артист России, заслуженный деятель искусств России</p></li>
+                        <li><p><b>Береснева, Глафира Степановна</b> - Директор средней школы №11, «Отличник народного просвещения РСФСР», участница Великой Отечественной войны</p></li>
+                        <li><p><b>Найденко, Валентин Васильевич (1938—2005)</b> - архитектор, лауреат Государственной премии РФ, академик Российской академии архитектуры и строительных наук, ректор ННГАСУ, профессор, доктор технических наук</p></li>
+                        <li><p><b>Илькаев, Радий Иванович</b> - физик, академик РАН</p></li>
+                        <li><p><b>Фертельмейстер, Эдуард Борисович</b> - композитор и дирижер, ректор Нижегородской государственной консерватории имени М. И. Глинки</p></li>
+                    </ul>
+                </div>
+                <div class="chapter" id="federation" data-chapter="Российская Федерация">
+                    <ul>
+                        <li><p><b>Соколов Александр Александрович</b> - советский партийный и государственный деятель, председатель Горьковского облисполкома, награждён орденом Октябрьской Революции, четырьмя орденами Трудового Красного Знамени, медалями Лауреат Государственной премии СССР и премии Совета Министров СССР</p></li>
+                        <li><p><b>Скляров Иван Петрович</b> - член Верховного совета РСФСР (1990-1993), вице-губернатор Нижегородский области (1991-1994), 2-й мэр Нижнего Новгорода (1994-1997), 2-й губернатор Нижегородской области (1997-2001), депутат Законодательного собрания Нижегородской области (2005-2007)</p></li>
                     </ul>
                 </div>
             </div>
