--- a/stands/honorary_citizens.html
+++ b/stands/honorary_citizens.html
@@ -90,6 +90,7 @@
                         <li><p><b>Илькаев, Радий Иванович</b> - физик, академик РАН</p></li>
                         <li><p><b>Фертельмейстер, Эдуард Борисович</b> - композитор и дирижер, ректор Нижегородской государственной консерватории имени М. И. Глинки</p></li>
                     </ul>
+                    <img data-label="Нагрудный знак к званию «Почётный гражданин Нижнего Новгорода»"/>
                 </div>
                 <div class="chapter" id="federation" data-chapter="Российская Федерация">
                     <ul>
